# prom

./: .COPYING  .clang-tidy  .gitmodules  AUTHORS  Makefile  Makefile.am  README.md  auto-clean  colorize  configure.ac  main.c  prom-module.c  prom-shell.c  prom.c  prom.h
examples/modules/BarTemplate/: Makefile  plugin.c
examples/modules/FooTemplate/: Makefile  plugin.c
filesystem/: filesystem.c  filesystem.h
modules/: Makefile  api.h  mods.c  mods.h
msck/: build  watch
mscripts/: copyrighter
shell/: pty.c  pty.h  shell.c  shell.h  terminal.c  terminal.h
src/: Makefile.am  main.c  prom-module.c  prom-shell.c  prom.c  prom.h
src/errm/: Makefile  errm.c  errm.h  tests.c
src/filesystem/: Makefile  Makefile.am  a.out  check_fs.c  filesystem.c  filesystem.h  tests.c
src/libtracer/: COPYING  Makefile  README.md  tracer.c  tracer.h
src/libtracer/examples/: Makefile  trace_file_reads.c
src/modules/: a.out  api.h  tests.c
src/shell/: pty.h  shell.h  terminal.h
tests/: Makefile.am  check_fs.c  check_mods.c  tests.h
utils/: error.h  logger.h
